feat: updated get bookings endpoint changes
